--- a/app/views/pages/leaders.html.erb
+++ b/app/views/pages/leaders.html.erb
@@ -7,13 +7,17 @@
   <div class="<%= @col_width %>">
     <div class="well leader-well">
       <div class="row leader-photo">
-        <%= icon('user fa-5x') %>
+        <%= image_tag 'JCurtis.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
-        <h4>Leader Title</h4>
+        <h4>Jamie Curtis</h4>
+        <h5>Board President (US)</h5>
       </div>
       <div class="row leader-bio">
-        <%= lorem_ipsum(170) %>
+        <p>
+          Jamie currently serves as Operations Manager for Energy Assistance Services at The Salvation Army Western Michigan Northern Indiana Division where she provides oversight and coordination for all facets of the statewide program operations. 
+          <br>Born and raised in Grand Rapids, Michigan, she earned her Bachelor of Science degree in History with a minor in Psychology from Grand Valley State University. After working in retail management for more than a dozen years, she started a family with her husband, Jason. They currently reside in Coopersville, MI with their daughters, Annabella and Lillian. Jamie is the current LOCODI US Board President.
+        </p>
       </div>
     </div>
   </div>
@@ -21,13 +25,17 @@
   <div class="<%= @col_width %>">
     <div class="well leader-well">
       <div class="row leader-photo">
-        <%= icon('user fa-5x') %>
+        <%= image_tag 'ROlupot.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
-        <h4>Leader Title</h4>
+        <h4>Rebecca Olupot</h4>
+        <h5>Chairperson (Uganda)</h5>
       </div>
       <div class="row leader-bio">
-        <%= lorem_ipsum(170) %>
+        <p>
+          Rebecca Olupot currently serves as a Missionary in Jinja, Uganda with her husband Emmanuel (a.k.a. Ruudy). For the past 4 years she had served in Soroti, Uganda providing spiritual counseling to former child soldiers and youth from various villages in the Soroti area. Rebecca felt called to the mission field since she was in high school and has visited many African countries in pursuit of her calling.
+          <br>She received her bachelor of arts in Social Work from Gordon College. She loves to see children and youth realize who they are in Christ and assist them to begin living lives with purpose. She is the current LOCODI Uganda Board Chairperson.
+        </p>
       </div>
     </div>
   </div>
@@ -35,13 +43,17 @@
   <div class="<%= @col_width %>">
     <div class="well leader-well">
       <div class="row leader-photo">
-        <%= icon('user fa-5x') %>
+        <%= image_tag 'BNorberg.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
-        <h4>Leader Title</h4>
+        <h4>Beth Norberg</h4>
+        <h5>General Secretary (US)</h5>
       </div>
       <div class="row leader-bio">
-        <%= lorem_ipsum(170) %>
+        <p>
+          Beth Norberg, M.A., loves children from around the world. She works as an elementary school teacher in Chicago (USA) and has taught children in Mexico and Spain, but developed a special heart for the children of Uganda when she was called to the country in 2013.
+          <br>The most impactful Bible verse relating to her mission work is 2 Timothy 1:7 "For God has not given us a spirit of timidity, but of power, love and discipline.” Beth is serving as LOCODI US General Secretary.
+        </p>
       </div>
     </div>
   </div>
@@ -49,13 +61,16 @@
   <div class="<%= @col_width %>">
     <div class="well leader-well">
       <div class="row leader-photo">
-        <%= icon('user fa-5x') %>
+        <%= image_tag 'EPaul.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
-        <h4>Leader Title</h4>
+        <h4>Egelu Paul</h4>
+        <h5>General Secretary (Uganda)</h5>
       </div>
       <div class="row leader-bio">
-        <%= lorem_ipsum(170) %>
+        <p>
+          Mr. Egelu Paul has a Bachelor’s degree in Forestry and Environmental Conservation. He is married and has three children. He is passionate about the orphan and the widow and spends a sizable amount of his time and resources on these. He is an elder in his church in Uganda and currently serves our board as the General Secretary of the LOCODI Uganda Board.
+        </p>
       </div>
     </div>
   </div>
@@ -63,13 +78,16 @@
   <div class="<%= @col_width %>">
     <div class="well leader-well">
       <div class="row leader-photo">
-        <%= icon('user fa-5x') %>
+        <%= image_tag 'HAgnes.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
-        <h4>Leader Title</h4>
+        <h4>Hellen Agnes Alengo</h4>
+        <h5>Treasurer (Uganda)</h5>
       </div>
       <div class="row leader-bio">
-        <%= lorem_ipsum(170) %>
+        <p>
+          Hellen Agnes Alengo is a passionate Ugandan Christian Lady. She is a professional accountant and is currently working as an accountant in one of the largest schools in Uganda. She has a passion for children and this has led her to sponsor over 7 different children orphan over the years. Hellen has a big heart and is full of compassion for the unloved. Hellen is the Treasurer of the LOCODI Uganda Board.
+        </p>
       </div>
     </div>
   </div>
@@ -77,13 +95,16 @@
   <div class="<%= @col_width %>">
     <div class="well leader-well">
       <div class="row leader-photo">
-        <%= icon('user fa-5x') %>
+        <%= image_tag 'SMaat.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
-        <h4>Leader Title</h4>
+        <h4>Sheryl Maat</h4>
+        <h5>Treasurer (USA)</h5>
       </div>
       <div class="row leader-bio">
-        <%= lorem_ipsum(170) %>
+        <p>
+          Sheryl Maat grew up in Grand Rapids, Michigan and currently resides in Cheney, Washington.  She and her husband attend Life Center Foursquare Church where she leads a weekly Women’s Bible Study.  Sheryl also teaches personal finance classes at Anna Ogden Hall, a local Women’s addiction recovery home in Spokane, Washington.  Sheryl’s passion for children is reflected in her past volunteer work, which includes teaching Sunday school, Director of Children’s Ministries, Director of MOPS, and Moms In Touch International.  Sheryl has been married to Ray for 31 years; they have four children and one grandson: Samantha & Nate and their son Colt, Christian & Katlyn, Alex, and Kirk.  Sheryl earned a B.S. degree in Business Management from Whitworth University, and currently works at Washington Trust Bank in the Commercial Lending Department. She is serving as the Treasurer of the LOCODI US Board. 
+        </p>
       </div>
     </div>
   </div>
@@ -91,13 +112,17 @@
   <div class="<%= @col_width %>">
     <div class="well leader-well">
       <div class="row leader-photo">
-        <%= icon('user fa-5x') %>
+        <%= image_tag 'BDavid.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
-        <h4>Leader Title</h4>
+        <h4>Benjamin David</h4>
+        <h5>Short Term Missions Leader (US)</h5>
       </div>
       <div class="row leader-bio">
-        <%= lorem_ipsum(170) %>
+        <p>
+          Benjamin David was born and raised in Uganda. After losing both his parents to AIDS, he was the first child at Mercy Childcare Ministries, a childcare ministry that was started by his high school friends. He later became a leader and house dad at the Mercy Childcare. He has led teams of students and families from around the globe to volunteer in various mission projects in Uganda and around East Africa.
+          <br>He currently lives in Grand Rapids, MI with his wife, Kari, whom he met while studying at Calvin College. He has a passion for sharing about what God is doing around the world and encouraging people to do something bigger than themselves. David is the LOCODI Short Term Missions Leader.
+        </p>
       </div>
     </div>
   </div>
