--- a/app/views/pages/support.html.erb
+++ b/app/views/pages/support.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag 'crouching_sand.jpg', class: "supersized-image" %>
 </div>
 
-<%= form_tag do %>
+<%= form_tag donate_path do %>
   <div class="content-block row donate-image-block">
     <div class="col-xs-12">
       <div class="well donate-image-well">
@@ -11,35 +11,58 @@
         <div class="row">
           <div class="col-sm-6">
             
-            <table class="table" id="donation_ammount">
+            <table class="table" id="donation_amount">
               <tr>
-                <th colspan="2"><h5>Ammount:</h5></th>
-                <th></th>
+                <th colspan="2"><h5>Amount:</h5></th>
+                <th class="text-right">
+                </th>
               </tr>
               <tr>
-                <td class="text-right"><%= radio_button_tag :amt, "20" %></td>
-                <td class="text-left"><%= label_tag :amt_20, "Donate $20" %></td>
+                <td class="text-right">
+                  <%= radio_button_tag :amt, "20", @amt == '20' %>
+                </td>
+                <td class="text-left">
+                  <%= label_tag :amt_20, "Donate $20" %>
+                </td>
                 <td></td>
               </tr>
               <tr>
-                <td class="text-right"><%= radio_button_tag :amt, "50" %></td>
-                <td class="text-left"><%= label_tag :amt_50, "Donate $50" %></td>
+                <td class="text-right">
+                  <%= radio_button_tag :amt, "50", @amt == '50' %>
+                </td>
+                <td class="text-left">
+                  <%= label_tag :amt_50, "Donate $50" %>
+                </td>
                 <td></td>
               </tr>
               <tr>
-                <td class="text-right"><%= radio_button_tag :amt, "100" %></td>
-                <td class="text-left"><%= label_tag :amt_100, "Donate $100" %></td>
+                <td class="text-right">
+                  <%= radio_button_tag :amt, "100", @amt == '100' %>
+                </td>
+                <td class="text-left">
+                  <%= label_tag :amt_100, "Donate $100" %>
+                </td>
                 <td></td>
               </tr>
               <tr>
-                <td class="text-right"><%= radio_button_tag :amt, "500" %></td>
-                <td class="text-left"><%= label_tag :amt_500, "Donate $500" %></td>
+                <td class="text-right">
+                  <%= radio_button_tag :amt, "500", @amt == '500' %>
+                </td>
+                <td class="text-left">
+                  <%= label_tag :amt_500, "Donate $500" %>
+                </td>
                 <td></td>
               </tr>
               <tr>
-                <td class="text-right"><%= radio_button_tag :amt, "var", checked: true %></td>
-                <td class="text-left"><%= label_tag :amt_var, "Other ammount:" %></td>
-                <td>$ <%= number_field_tag :var_amt, 1000, min: 20 %></td>
+                <td class="text-right">
+                  <%= radio_button_tag :amt, "var", params[:amt] == "var" || @amt == '1000' %>
+                </td>
+                <td class="text-left">
+                  <%= label_tag :amt_var, "Other amount:" %>
+                </td>
+                <td>
+                  $ <%= number_field_tag :amt_var_field, @amt_var_field, min: 20 %>
+                </td>
               </tr>
             </table>
 
@@ -48,15 +71,17 @@
                 <th colspan="3"><h5>This is a:</h5></th>
               </tr>
               <tr>
-                <td class="text-right"><%= radio_button_tag :recur, "once", checked: true %></td>
-                <td class="text-left"><%= label_tag :recur_one, "One-time donation" %></td>
+                <td class="text-right"><%= radio_button_tag :recur, "once", @recur == 'once' %></td>
+                <td class="text-left"><%= label_tag :recur_once, "One-time donation" %></td>
                 <td></td>
               </tr>
+            <!-- TEMP Awaiting Business account 
               <tr>
-                <td class="text-right"><%= radio_button_tag :recur, "monthly" %></td>
-                <td class="text-left"><%= label_tag :recur_month, "Monthly donation" %></td>
-                <td class="text-left">For the next &nbsp<%= number_field_tag :recur_months, 12, min: 2, step: 1 %> months</td>
-              </tr>
+                <td class="text-right"><%= radio_button_tag :recur, "monthly", @recur == 'monthly' %></td>
+                <td class="text-left"><%= label_tag :recur_monthly, "Monthly donation" %></td>
+                <td class="text-left">For the next &nbsp<%= number_field_tag :recur_months, @recur_months, min: 2, step: 1 %> months</td>
+              </tr> 
+            -->
             </table>
           </div>
 
@@ -66,6 +91,10 @@
             </div>
 
             <%= submit_tag "Donate", class: "btn btn-lg btn-primary donate-btn" %>
+
+            <div class="spacing">
+              <img src="https://www.paypalobjects.com/webstatic/mktg/logo/bdg_secured_by_pp_2line.png" border="0" alt="Secured by PayPal">
+            </div>
           </div>
         </div>
           
