add tax-exemption note to support page

--- a/app/views/pages/support.html.erb
+++ b/app/views/pages/support.html.erb
@@ -92,9 +92,14 @@
 
             <%= submit_tag "Donate", class: "btn btn-lg btn-primary donate-btn" %>
 
+            <div class="notice">
+              <i>LOCODI is currently awaiting our 501c3 approval and we cannot offer tax-exempt status for your gift at this time.</i>
+            </div>
             <div class="spacing">
               <img src="https://www.paypalobjects.com/webstatic/mktg/logo/bdg_secured_by_pp_2line.png" border="0" alt="Secured by PayPal">
             </div>
+
+
           </div>
         </div>
           
