remove dev params, add thank you message to support page

--- a/app/views/pages/support.html.erb
+++ b/app/views/pages/support.html.erb
@@ -112,9 +112,9 @@
 <div class="content-block row">
   <div class="col-xs-12">
     <div class="well">
-      <h4 class="text-center">Donation thank you message</h4>
+      <h4 class="text-center">Thank you for making LOCODI's work possible!</h4>
       <p class="text-center">
-        <%= lorem_ipsum(250) %>
+        Thank you very much for donating to our ministry. We promise to be good stewards of your gift and will use it faithfully. Don’t hesitate to <%= mail_to "info@locodi.org", "contact us", subject: "From the support page", encode: "hex", target: :blank %> if you have any questions regarding the use of your gift. God bless you.
       </p>
     </div>
   </div>
