--- a/app/views/pages/leaders.html.erb
+++ b/app/views/pages/leaders.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag 'mountains_banner.jpeg', class: "banner-img" %>
 </div>
 
-<div class="row content-block">
+<div class="content-block">
 
   <div class="<%= @col_width %>">
     <div class="well leader-well">
