--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -16,6 +16,9 @@
     <li id="support" >
       <%= link_to icon('envelope fa-fw') + " Support", support_path %>
     </li>
+    <li id="sponsor">
+      <%= link_to icon('child fa-fw') + " Sponsor", sponsor_path %>
+    </li>
     <li id="join" >
       <%= link_to icon('group fa-fw') + " Join Us", join_path %>
     </li>
