--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,5 +1,5 @@
 <div class="banner-img-div">
-  <%= image_tag 'skyscape_banner.jpg', class: "banner-img" %>
+  <%= image_tag 'wheat_field_banner.jpg', class: "banner-img" %>
 </div>
 
 <div class="row">
