--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,17 +13,17 @@
 // Theme colors:
 // Color scheme: http://www.rapidtables.com/web/color/color-scheme.htm
 //     Starting hex: #A67240
-$pri-clr: rgba(248,237,217,1); //beige
-$sec-clr: rgba(136,164,210,1); //lt blue
-$ter-clr-1: rgba(231,167,159,1); //lt red
-$ter-clr-2: rgba(116,165,64,1); //lt green
-$quat-clr: rgba(32,56,111,1); //dk blue
+$pri-clr:   white; //rgba(248,237,217,1); //beige
+$sec-clr:   white; //rgba(136,164,210,1); //lt blue
+$ter-clr-1: white; //rgba(231,167,159,1); //lt red
+$ter-clr-2: white; //rgba(116,165,64,1); //lt green
+$quat-clr:  white; //rgba(32,56,111,1); //dk blue
 
-$pri-clr-trans: rgba(248,237,217,.5); //beige
-$sec-clr-trans: rgba(136,164,210,.5); //lt blue
-$ter-clr-1-trans: rgba(231,167,159,.5); //lt red
-$ter-clr-2-trans: rgba(83,165,64,.5); //lt green
-$quat-clr-trans: rgba(32,56,111,.65); //dk blue
+$pri-clr-trans:   rgba(255,255,255,.5); //rgba(248,237,217,.5); //beige
+$sec-clr-trans:   rgba(255,255,255,.5); //rgba(136,164,210,.5); //lt blue
+$ter-clr-1-trans: rgba(255,255,255,.5); //rgba(231,167,159,.5); //lt red
+$ter-clr-2-trans: rgba(255,255,255,.5); //rgba(83,165,64,.5); //lt green
+$quat-clr-trans:  rgba(255,255,255,.5); //rgba(32,56,111,.65); //dk blue
 
 h1 {
   color: #666666;
@@ -209,12 +209,12 @@ body {
   background-color: $quat-clr-trans;
   p {
     text-align: right;
-    color: white;
+    color: black;
     line-height: .25em;
     span#created_by {
       font-size: .75em;
       a {
-        color: white;
+        color: black;
       }
     }
   }
