--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,8 +1,21 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$sec-clr: rgba(136,164,210,1); //lt blue
-$quat-clr: rgba(32,56,111,1); //dk blue
+
+// Theme colors:
+// Color scheme: http://www.rapidtables.com/web/color/color-scheme.htm
+//     Starting hex: #A67240
+$pri-clr:   white; //rgba(248,237,217,1); //beige
+$sec-clr:   white; //rgba(136,164,210,1); //lt blue
+$ter-clr-1: white; //rgba(231,167,159,1); //lt red
+$ter-clr-2: white; //rgba(116,165,64,1); //lt green
+$quat-clr:  white; //rgba(32,56,111,1); //dk blue
+
+$pri-clr-trans:   rgba(255,255,255,.5); //rgba(248,237,217,.5); //beige
+$sec-clr-trans:   rgba(255,255,255,.5); //rgba(136,164,210,.5); //lt blue
+$ter-clr-1-trans: rgba(255,255,255,.5); //rgba(231,167,159,.5); //lt red
+$ter-clr-2-trans: rgba(255,255,255,.5); //rgba(83,165,64,.5); //lt green
+$quat-clr-trans:  rgba(255,255,255,.5); //rgba(32,56,111,.65); //dk blue
 
 // Set a styling for wells inside content-blocks
 div.content-block div.well {
@@ -51,14 +64,8 @@ h3, h4 {
 }
 
 // Styling for support page:
-#recur_months {
-  width: 48px;
-  text-align: right;
-}
-
-#amt_var_field {
-  width: 96px;
-  text-align: right;
+.hysiframe {
+  border-radius: 12px;
 }
 
 // donate-image and donate-btn styling:
