split child and pastor sponsor

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -13,15 +13,19 @@
     <li id="leaders">
       <%= link_to icon('gavel fa-fw') + " Board", leaders_path %>
     </li>
-    <li id="support" >
-      <%= link_to icon('envelope fa-fw') + " Support", support_path %>
-    </li>
-    <li id="sponsor">
-      <%= link_to icon('child fa-fw') + " Sponsor", sponsor_path %>
-    </li>
     <li id="join" >
       <%= link_to icon('group fa-fw') + " Join Us", join_path %>
     </li>
+    <li id="support" >
+      <%= link_to icon('envelope fa-fw') + " Support", support_path %>
+    </li>
+    <li id="sponsor_child">
+      <%= link_to icon('child fa-fw') + " Children", sponsor_child_path %>
+    </li>
+    <li id="sponsor_pastor">
+      <%= link_to icon('graduation-cap fa-fw') + " Pastors", sponsor_pastor_path %>
+    </li>
+    
     <li id="blog" >
       <%= link_to icon('list-alt fa-fw') + " Blog", blog_path %>
     </li>
