--- a/app/views/pages/support.html.erb
+++ b/app/views/pages/support.html.erb
@@ -6,7 +6,7 @@
   <div class="col-xs-12">
     <div class="well">
       <iframe class="hysiframe" src="https://app.helpyousponsor.com/frontend/view_entity/91/428/16985" style="border:0px #FFFFFF none;" name="HYSiFrame" scrolling="no" frameborder="1" height="400px" marginheight="0px" marginwidth="0px" width="100%"></iframe>
-      <p>Your donations are tax deductible in the United States.</p>
+      <p>Your donations are tax deductible in the United States. LOCODI is a 501c3 organization, EIN # 47-3250222</p>
     </div>
   </div>
 </div>
