--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -17,6 +17,9 @@
       <p class="align-left">
         Our students come from some of the poorest villages and islands of Lake Victoria in Jinja. We seek out those who seek out the heart of God. We provide education for those who want to serve in ministry but have obstacles that prevent them from going to higher learning institutions. Obstacles like limited education and money, or even simply being born a woman.
       </p>
+      <p class="align-left">
+        You can help by <%= link_to "sponsoring a pastor", sponsor_pastor_path %> today to provide meals, lodging and utilities for a pastor attending Kingdom Life.
+      </p>
     </div>
   </div>
 </div>
@@ -74,7 +77,7 @@
         - James 1:27 (NKJ)
       </i>
       <p class="align-left">
-        We create the opportunity for Westerners and local Ugandans to provide educational support for students. We are currently connecting education sponsors with street kids in Soroti and in a nearby village. As we provide Ugandans with sponsorship opportunities, we also encourage Western partners to <%= link_to "sponsor children in need", join_path %>.
+        We create the opportunity for Westerners and local Ugandans to provide educational support for students. We are currently connecting education sponsors with street kids in Soroti and in a nearby village. As we provide Ugandans with sponsorship opportunities, we also encourage Western partners to <%= link_to "sponsor children in need", sponsor_child_path %>.
       </p>
     </div>
   </div>
@@ -95,8 +98,8 @@
         - Ref (NKJ)
       </i>
       <p class="align-left">
-        A commitment of <%= link_to "$18 a month", join_path %> provides school fees and scholastic materials for one child. The student will also have the opportunity to attend a weekly Bible study and game time. We have an average of 40 students on our sponsorship waiting list at any given time. We need
-         <%= link_to "your support", join_path %> to ensure these children get the education they need to succeed.
+        A commitment of <%= link_to "$20 a month", sponsor_child_path %> provides school fees and scholastic materials for one child. The student will also have the opportunity to attend a weekly Bible study and game time. We have an average of 40 students on our sponsorship waiting list at any given time. We need
+         <%= link_to "your support", sponsor_child_path %> to ensure these children get the education they need to succeed.
       </p>
     </div>
   </div>
@@ -116,6 +119,9 @@
       </i>
       <p class="align-left">
         Kingdom Life Training Center began through the outreach that Welcome Home Ministries (WHM) was doing in the villages surrounding Jinja. WHM is a children’s home for 60+ orphans and run-away kids. WHM works to re-unify these children back into their homes or find new adoptive homes. We support WHM in various ways including outreach initiatives and staff support at the home. We also stop by to play with the kids every chance we get.
+      </p>
+      <p class="align-left">
+        Your <%= link_to "donation to LOCODI", support_path %> can help us continue this work.
       </p>
     </div>
   </div>
