--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -33,7 +33,7 @@
       <%= link_to icon('share-alt fa-fw') + " Social", social_path %>
     </li>
     <li id="calendar">
-      <%= link_to icon('calendar fa-fw') + " Events", calendar_path %>
+      <%= link_to icon('calendar fa-fw') + " Calendar", calendar_path %>
     </li>
     
   </ul>
