--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,7 +55,7 @@
       </h4>
       <i class="align-right">
       </i>
-      <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=theolupots&flexible=0&dont_load_new_posts=1&more_button=0&post_limit=8&show_rebelnav=0&height=1200"></script>
+      <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=locodi&flexible=0&dont_load_new_posts=1&more_button=0&post_limit=8&show_rebelnav=0&height=1200"></script>
     </div>
   </div>
 </div>
