--- a/app/views/pages/social.html.erb
+++ b/app/views/pages/social.html.erb
@@ -3,5 +3,5 @@
 </div>
 
 <div class="rebel-mouse">
-  <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=theolupots&flexible=1&dont_load_new_posts=0&more_button=1&theme=16"></script>
+  <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=locodi&flexible=1&dont_load_new_posts=0&more_button=0&post_limit=16&show_rebelnav=0&theme=16"></script>
 </div>
